<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="40sp"
        android:textColor="#FFFFFF"
        android:layout_alignParentTop = "true"
        android:layout_centerHorizontal = "true"
        android:layout_marginTop="150dp" />

    <EditText
        android:id="@+id/user1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="40dp"
        android:hint="@string/username"
        android:autofillHints="Enter username"
        android:textCursorDrawable="@null"
        android:inputType="text"
        android:drawableStart="@drawable/blank"
        android:drawablePadding="5dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="250dp"
        android:gravity="start"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:autofillHints="Enter password"
        android:textCursorDrawable="@null"
        android:drawableStart="@drawable/blank"
        android:drawablePadding="5dp"
        android:inputType="textPassword"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="320dp"
        android:id="@+id/pass1"
        android:gravity="start" />

    <ImageView
        android:id="@+id/toggle_view1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="330dp"
        android:layout_marginStart="330dp"
        android:focusable="true"
        android:scaleType="centerCrop"
        android:onClick="toggle"
        android:clickable="true"
        android:src="@drawable/hide" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:autofillHints="Enter email"
        android:textCursorDrawable="@null"
        android:drawableStart="@drawable/blank"
        android:drawablePadding="5dp"
        android:inputType="textEmailAddress"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="390dp"
        android:id="@+id/email1"
        android:gravity="start" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:id="@+id/login"
        android:textAllCaps="false"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="480dp"
        android:textColor="#FFF"
        android:textSize="20sp"
        android:onClick="login"
        android:background="@drawable/round_button"
        android:gravity="center"/>

    <TextView
        android:id="@+id/register1"
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:layout_marginTop="600dp"
        android:layout_marginStart="100dp"
        android:fontFamily="sans-serif"
        android:text="@string/don_t_have_an_account_yet"
        android:textColor="#FFF"
        android:textSize="12sp"
        android:focusable="true" />

    <TextView
        android:id="@+id/register2"
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:layout_marginTop="600dp"
        android:fontFamily="sans-serif"
        android:clickable="true"
        android:text="@string/register"
        android:onClick="register"
        android:layout_toEndOf="@+id/register1"
        android:textColor="#FF0000"
        android:textSize="12dp"
        android:focusable="true" />

</RelativeLayout>

